--- a/TKV2025_soubory/sheet011.htm
+++ b/TKV2025_soubory/sheet011.htm
@@ -46,8 +46,8 @@ else
 
 <body link=blue vlink=purple class=xl70>
 
-<table border=0 cellpadding=0 cellspacing=0 width=10895 style='border-collapse:
- collapse;table-layout:fixed;width:8190pt'>
+<table border=0 cellpadding=0 cellspacing=0 width=10992 style='border-collapse:
+ collapse;table-layout:fixed;width:8263pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
  <col class=xl70 width=196 style='mso-width-source:userset;mso-width-alt:7168;
@@ -199,8 +199,8 @@ else
  <col class=xl70 width=50 style='width:38pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
- <col class=xl70 width=80 style='mso-width-source:userset;mso-width-alt:2925;
- width:60pt'>
+ <col class=xl70 width=177 style='mso-width-source:userset;mso-width-alt:6473;
+ width:133pt'>
  <col class=xl70 width=105 style='mso-width-source:userset;mso-width-alt:3840;
  width:79pt'>
  <col class=xl70 width=50 style='width:38pt'>
@@ -363,7 +363,7 @@ else
   <td class=xl70 width=105 style='width:79pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
-  <td class=xl70 width=80 style='width:60pt'></td>
+  <td class=xl70 width=177 style='width:133pt'></td>
   <td class=xl70 width=105 style='width:79pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
@@ -1085,7 +1085,7 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71>Aktuální kolo</td>
-  <td class=xl170 align=right style='border-left:none'>19</td>
+  <td class=xl170 align=right style='border-left:none'>20</td>
   <td class=xl96></td>
   <td class=xl97>&nbsp;</td>
   <td class=xl163>&nbsp;</td>
@@ -1214,13 +1214,13 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Strašil Pavel [CZE015487]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>14</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>10000</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>15</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>10650</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Průměrná účast</td>
-  <td class=xl172 align=right style='border-top:none;border-left:none'>7,9</td>
+  <td class=xl172 align=right style='border-top:none;border-left:none'>7,8</td>
   <td class=xl98></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1349,13 +1349,13 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Ptáček Radim [CZE071042]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>15</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>9650</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>16</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>9900</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Počet odehraných kol</td>
-  <td class=xl170 align=right style='border-top:none;border-left:none'>16</td>
+  <td class=xl170 align=right style='border-top:none;border-left:none'>17</td>
   <td class=xl98></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1575,8 +1575,8 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Růžička Martin
   [CZE069712]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>12</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>5500</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>13</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>5950</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -1799,9 +1799,9 @@ else
   <td height=20 class=xl94 style='height:15.0pt;font-size:11.0pt;color:black;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Šmíd Michal [CZE064383]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>12</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>5000</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Močuba Jiří [CZE062045]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>14</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>5100</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td colspan=3 class=xl71>Žebříček vítězů</td>
@@ -2022,9 +2022,9 @@ else
   <td height=20 class=xl94 style='height:15.0pt;font-size:11.0pt;color:black;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>5</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Močuba Jiří [CZE062045]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>13</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>4750</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Šmíd Michal [CZE064383]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>12</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>5000</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Pořadí</td>
@@ -2157,16 +2157,16 @@ else
   <td height=20 class=xl94 style='height:15.0pt;font-size:11.0pt;color:black;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>6</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Březina Lukáš [CZE057909]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>13</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>4050</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Hladký Pavel [CZE071237]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>9</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>4450</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
   <td class=xl82 style='border-top:none'>Strašil Pavel [CZE015487]</td>
-  <td class=xl145 style='border-left:none'>11</td>
+  <td class=xl145 style='border-left:none'>12</td>
   <td class=xl70></td>
   <td class=xl101>&nbsp;</td>
   <td class=xl70></td>
@@ -2504,9 +2504,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>7</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Hladký Pavel [CZE071237]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>8</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>3900</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Březina Lukáš [CZE057909]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>14</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>4300</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
@@ -2625,9 +2625,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Jenšík Ondřej [CZE057906]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>950</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Strašil Pavel [CZE015487]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>650</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -2796,9 +2798,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Ptáček Radim [CZE071042]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>850</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Hladký Pavel [CZE071237]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>550</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -2966,9 +2970,12 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Strašil Pavel [CZE015487]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>750</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Růžička Martin
+  [CZE069712]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>450</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3136,9 +3143,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Šmíd Michal [CZE064383]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>650</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Močuba Jiří [CZE062045]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>350</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3304,9 +3313,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Močuba Jiří [CZE062045]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>550</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>5</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Březina Lukáš [CZE057909]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>250</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3471,9 +3482,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Lacina Tomáš [CZE059603]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>550</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>6</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Ptáček Radim [CZE071042]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>250</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -14876,7 +14889,7 @@ else
   <td width=105 style='width:79pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
-  <td width=80 style='width:60pt'></td>
+  <td width=177 style='width:133pt'></td>
   <td width=105 style='width:79pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
