--- a/TKV2025_soubory/sheet019.htm
+++ b/TKV2025_soubory/sheet019.htm
@@ -46,8 +46,8 @@ else
 
 <body link=blue vlink=purple class=xl70>
 
-<table border=0 cellpadding=0 cellspacing=0 width=11999 style='border-collapse:
- collapse;table-layout:fixed;width:9011pt'>
+<table border=0 cellpadding=0 cellspacing=0 width=12104 style='border-collapse:
+ collapse;table-layout:fixed;width:9090pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
  <col class=xl70 width=197 style='mso-width-source:userset;mso-width-alt:7204;
@@ -200,8 +200,8 @@ else
  <col class=xl70 width=50 style='width:38pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
- <col class=xl70 width=80 style='mso-width-source:userset;mso-width-alt:2925;
- width:60pt'>
+ <col class=xl70 width=185 style='mso-width-source:userset;mso-width-alt:6765;
+ width:139pt'>
  <col class=xl70 width=128 style='mso-width-source:userset;mso-width-alt:4681;
  width:96pt'>
  <col class=xl70 width=50 style='width:38pt'>
@@ -364,7 +364,7 @@ else
   <td class=xl70 width=128 style='width:96pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
-  <td class=xl70 width=80 style='width:60pt'></td>
+  <td class=xl70 width=185 style='width:139pt'></td>
   <td class=xl70 width=128 style='width:96pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
@@ -1086,7 +1086,7 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71>Aktuální kolo</td>
-  <td class=xl165 style='border-left:none'>19</td>
+  <td class=xl165 style='border-left:none'>20</td>
   <td class=xl70></td>
   <td class=xl97>&nbsp;</td>
   <td class=xl163>&nbsp;</td>
@@ -1214,14 +1214,14 @@ else
   <td height=20 class=xl94 style='height:15.0pt;font-size:11.0pt;color:black;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Landa Aleš [CZE082580]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>36</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>16800</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Fábera Jiří [CZE075508]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>28</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>17700</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Průměrná účast</td>
-  <td class=xl148 style='border-top:none;border-left:none'>7,7</td>
+  <td class=xl148 style='border-top:none;border-left:none'>7,6</td>
   <td class=xl68></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1349,14 +1349,14 @@ else
   <td height=20 class=xl94 style='height:15.0pt;font-size:11.0pt;color:black;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Fábera Jiří [CZE075508]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>26</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>16500</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Landa Aleš [CZE082580]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>38</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>17500</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Počet odehraných kol</td>
-  <td class=xl165 style='border-top:none;border-left:none'>18</td>
+  <td class=xl165 style='border-top:none;border-left:none'>19</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1799,8 +1799,8 @@ else
   <td height=20 class=xl94 style='height:15.0pt;font-size:11.0pt;color:black;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Sedláček Pavel
-  [CZE054627]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Melichar Tomáš
+  [CZE080084]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>30</td>
   <td class=xl65 style='border:.5pt solid windowtext'>11500</td>
   <td class=xl104></td>
@@ -2023,10 +2023,10 @@ else
   <td height=20 class=xl94 style='height:15.0pt;font-size:11.0pt;color:black;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>5</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Melichar Tomáš
-  [CZE080084]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>28</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>10600</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Sedláček Pavel
+  [CZE054627]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>30</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>11500</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Pořadí</td>
@@ -2168,7 +2168,7 @@ else
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
   <td class=xl82 style='border-top:none'>Fábera Jiří [CZE075508]</td>
-  <td class=xl145 style='border-left:none'>9</td>
+  <td class=xl145 style='border-left:none'>10</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -2506,9 +2506,10 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>7</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Kříž Miroslav [CZE068544]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>16</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>7900</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Kunčar Leopold
+  [CZE002085]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>18</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>9000</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
@@ -2635,9 +2636,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Minster Marek [CZE026339]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>1600</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Fábera Jiří [CZE075508]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>1200</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -2683,10 +2686,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>8</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Kunčar Leopold
-  [CZE002085]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Kříž Miroslav [CZE068544]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>16</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>7800</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>7900</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
@@ -2815,9 +2817,12 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Klíma Kvirín [CZE066638]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>1400</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Kunčar Leopold
+  [CZE002085]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>1200</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -2990,9 +2995,12 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Landa Aleš [CZE082580]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>1200</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Melichar Tomáš
+  [CZE080084]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>900</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3166,9 +3174,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Fábera Jiří [CZE075508]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>1100</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Landa Aleš [CZE082580]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>700</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3340,9 +3350,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Smejkal Tomáš [CZE084039]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>900</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>5</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Smejkal Tomáš [CZE084039]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>500</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3724,9 +3736,8 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>14</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Babický Michal
-  [CZE063138]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>2</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Vacek Lukáš [CZE083184]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>6</td>
   <td class=xl65 style='border:.5pt solid windowtext'>1900</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -3882,8 +3893,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>15</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Vacek Lukáš [CZE083184]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>6</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Babický Michal
+  [CZE063138]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>2</td>
   <td class=xl65 style='border:.5pt solid windowtext'>1900</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -4174,9 +4186,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>17</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Jenšík Ondřej [CZE057906]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>2</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>1200</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Smejkal Tomáš [CZE084039]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>4</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>1400</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -4316,8 +4328,7 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>18</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Čechová Kateřina
-  [CZE064386]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Jenšík Ondřej [CZE057906]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>2</td>
   <td class=xl65 style='border:.5pt solid windowtext'>1200</td>
   <td class=xl70></td>
@@ -4456,7 +4467,8 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>19</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Bártl Filip [CZE066207]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Čechová Kateřina
+  [CZE064386]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>2</td>
   <td class=xl65 style='border:.5pt solid windowtext'>1200</td>
   <td class=xl70></td>
@@ -4594,10 +4606,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>20</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Smejkal František
-  [CZE071305]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Bártl Filip [CZE066207]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>2</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>1000</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>1200</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -4868,9 +4879,10 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>22</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Smejkal Tomáš [CZE084039]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Smejkal František
+  [CZE071305]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>2</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>900</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>1000</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -14542,7 +14554,7 @@ else
   <td width=128 style='width:96pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
-  <td width=80 style='width:60pt'></td>
+  <td width=185 style='width:139pt'></td>
   <td width=128 style='width:96pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
